--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.4",
     "@fortawesome/fontawesome-free": "^6.2.0",
     "@mantine/form": "^5.6.3",
