--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@fortawesome/fontawesome-free": "^6.2.0",
     "@mantine/form": "^5.6.3",
     "@mantine/notifications": "^5.6.3",
+    "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.11",
     "@nextui-org/react": "^1.0.0-beta.10",
     "@testing-library/jest-dom": "^5.16.5",
